--- a/locale/sv/LC_MESSAGES/django.po
+++ b/locale/sv/LC_MESSAGES/django.po
@@ -10,11 +10,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-12 00:24+0300\n"
+"POT-Creation-Date: 2023-09-28 23:44+0300\n"
 "PO-Revision-Date: 2023-09-15 10:18+0000\n"
 "Last-Translator: Ida Sihvonen <ida.sihvonen@kausal.tech>\n"
-"Language-Team: Swedish <https://weblate.kausal.tech/projects/watch/django/sv/"
-">\n"
+"Language-Team: Swedish <https://weblate.kausal.tech/projects/watch/django/sv/>\n"
 "Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -81,13 +80,9 @@ msgstr "Framsteg"
 msgid "Contact persons"
 msgstr "Kontaktpersoner"
 
-#: actions/action_admin.py actions/api.py
+#: actions/action_admin.py actions/api.py actions/blocks/action_content.py
 msgid "Responsible parties"
 msgstr "Ansvariga parter"
-
-#: actions/action_admin.py
-msgid "Tasks"
-msgstr "Uppgifter"
 
 #: actions/action_admin.py
 msgid "Reporting"
@@ -125,9 +120,7 @@ msgstr "%(model_name)s '%(object)s' borttagen."
 #: actions/action_admin_mixins.py
 #, python-format
 msgid "%(model_name)s '%(object)s' is live and this version has been scheduled for publishing."
-msgstr ""
-"%(model_name)s '%(object)s' är live och denna version har planerats för "
-"publicering."
+msgstr "%(model_name)s '%(object)s' är live och denna version har planerats för publicering."
 
 #: actions/action_admin_mixins.py
 #, fuzzy, python-format
@@ -340,6 +333,10 @@ msgid "%(attribute_type)s (text)"
 msgstr "%(attribute_type)s (text)"
 
 #: actions/blocks/action_content.py
+msgid "Heading to show instead of the default"
+msgstr ""
+
+#: actions/blocks/action_content.py
 msgid "contact form"
 msgstr "kontaktformulär"
 
@@ -356,8 +353,18 @@ msgstr "Beskrivning som ska visas efter fältinnehållet"
 msgid "Content block: %(label)s"
 msgstr "Innehållsblock:%(label)s"
 
+#: actions/blocks/action_content.py actions/models/action.py pages/models.py
+msgid "Lead paragraph"
+msgstr "Ingress"
+
 #: actions/blocks/action_content.py
 msgid "Merged actions"
+msgstr "Sammanslagna åtgärder"
+
+#: actions/blocks/action_content.py
+#, fuzzy
+#| msgid "Merged actions"
+msgid "Related actions"
 msgstr "Sammanslagna åtgärder"
 
 #: actions/blocks/action_content.py
@@ -422,6 +429,16 @@ msgstr "Tabell"
 #: actions/blocks/category_list.py
 msgid "Value attribute"
 msgstr "Värdeattribut"
+
+#: actions/blocks/category_page_layout.py
+#, fuzzy
+#| msgid "implementation phase"
+msgid "Implementation phase"
+msgstr "genomförandefas"
+
+#: actions/blocks/category_page_layout.py
+msgid "Status"
+msgstr "Status"
 
 #: actions/blocks/filters.py reports/blocks/action_content.py
 msgid "Field"
@@ -526,6 +543,12 @@ msgid "Choose another category type"
 msgstr "Välj en annan typ av kategori"
 
 #: actions/chooser.py
+#, fuzzy
+#| msgid "Choose a category"
+msgid "Choose a category level"
+msgstr "Välj en kategori"
+
+#: actions/chooser.py
 msgid "Choose an action"
 msgstr "Välj en åtgärd"
 
@@ -627,10 +650,6 @@ msgstr "Identifieraren för denna åtgärd (t.ex. nummer)"
 #: actions/models/action.py
 msgid "Image"
 msgstr "Bild"
-
-#: actions/models/action.py pages/models.py
-msgid "Lead paragraph"
-msgstr "Ingress"
 
 #: actions/models/action.py actions/models/plan.py indicators/models.py
 #: orgs/models.py
@@ -1877,9 +1896,7 @@ msgstr "Denna användare har inte tillgång till admin."
 
 #: admin_site/chooser.py
 msgid "What is the part after @ in the staff email address of the organization mainly responsible for the plan?"
-msgstr ""
-"Vad är delen efter @ i personalens e-postadress till den organisation som "
-"huvudsakligen ansvarar för planen?"
+msgstr "Vad är delen efter @ i personalens e-postadress till den organisation som huvudsakligen ansvarar för planen?"
 
 #: admin_site/chooser.py
 #, fuzzy
@@ -2212,6 +2229,24 @@ msgid "Case studies"
 msgstr "Handlingar"
 
 #: content/models.py
+#, fuzzy
+#| msgid "Tasks"
+msgid "Task"
+msgstr "Uppgifter"
+
+#: content/models.py
+msgid "Milestone"
+msgstr ""
+
+#: content/models.py
+msgid "Tasks"
+msgstr "Uppgifter"
+
+#: content/models.py
+msgid "Milestones"
+msgstr ""
+
+#: content/models.py
 msgid "site title"
 msgstr "Sidans Titel"
 
@@ -2259,6 +2294,12 @@ msgstr "Länk till GitHub-förvar för UI"
 #, fuzzy
 #| msgid "editable for actions"
 msgid "Term to use for 'action'"
+msgstr "redigerbar för åtgärder"
+
+#: content/models.py
+#, fuzzy
+#| msgid "editable for actions"
+msgid "Term to use for 'task'"
 msgstr "redigerbar för åtgärder"
 
 #: content/models.py
@@ -3697,6 +3738,10 @@ msgid "Content pages"
 msgstr "Innehållssidor"
 
 #: pages/models.py
+msgid "Level layouts"
+msgstr ""
+
+#: pages/models.py
 #, fuzzy
 #| msgid "Category type"
 msgid "Category type page"
@@ -3707,6 +3752,28 @@ msgstr "Kategorityp"
 #| msgid "Category types"
 msgid "Category type pages"
 msgstr "Kategorityper"
+
+#: pages/models.py
+#, fuzzy
+#| msgid "small"
+msgid "Small"
+msgstr "liten"
+
+#: pages/models.py
+#, fuzzy
+#| msgid "medium"
+msgid "Medium"
+msgstr "medium"
+
+#: pages/models.py
+#, fuzzy
+#| msgid "large"
+msgid "Large"
+msgstr "stor"
+
+#: pages/models.py
+msgid "icon size"
+msgstr ""
 
 #: pages/models.py
 msgid "Action list"
@@ -3807,6 +3874,14 @@ msgstr "Åtgärdslista"
 #| msgid "Action list"
 msgid "Action list pages"
 msgstr "Åtgärdslista"
+
+#: pages/models.py
+msgid "Should insight network be shown for indicators"
+msgstr ""
+
+#: pages/models.py
+msgid "Display insights"
+msgstr ""
 
 #: pages/models.py
 #, fuzzy
@@ -4575,9 +4650,6 @@ msgstr "Inget tillstånd att ta bort användaren som tillhör planer som du inte
 
 #~ msgid "My actions"
 #~ msgstr "Mina åtgärder"
-
-#~ msgid "Status"
-#~ msgstr "Status"
 
 #~ msgid "Edit this action"
 #~ msgstr "Redigera den här åtgärden"
