--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -10,11 +10,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-28 23:44+0300\n"
+"POT-Creation-Date: 2023-09-29 00:05+0300\n"
 "PO-Revision-Date: 2023-09-28 21:01+0000\n"
 "Last-Translator: Bernhard Bliem <bernhard.bliem@kausal.tech>\n"
-"Language-Team: German <https://weblate.kausal.tech/projects/watch/django/de/>"
-"\n"
+"Language-Team: German <https://weblate.kausal.tech/projects/watch/django/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3535,7 +3534,9 @@ msgid "Action list pages"
 msgstr "Maßnahmenlistenseiten"
 
 #: pages/models.py
-msgid "Should insight network be shown for indicators"
+#, fuzzy
+#| msgid "Should insight network be shown for indicators"
+msgid "Should insight network be shown for indicators?"
 msgstr "Soll ein Überblicksnetz für Indikatoren angezeigt werden?"
 
 #: pages/models.py
