--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-28 23:44+0300\n"
+"POT-Creation-Date: 2023-09-29 00:05+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -3512,7 +3512,7 @@ msgid "Action list pages"
 msgstr ""
 
 #: pages/models.py
-msgid "Should insight network be shown for indicators"
+msgid "Should insight network be shown for indicators?"
 msgstr ""
 
 #: pages/models.py
