--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-28 23:44+0300\n"
+"POT-Creation-Date: 2023-09-29 00:05+0300\n"
 "PO-Revision-Date: 2023-08-25 10:18+0000\n"
 "Last-Translator: Joe Smallwood <joe.smallwood@kausal.tech>\n"
 "Language-Team: Finnish <https://weblate.kausal.tech/projects/watch/django/fi/>\n"
@@ -3654,8 +3654,10 @@ msgid "Action list pages"
 msgstr "Toimenpideluettelosivut"
 
 #: pages/models.py
-msgid "Should insight network be shown for indicators"
-msgstr ""
+#, fuzzy
+#| msgid "Should the page be shown in the footer?"
+msgid "Should insight network be shown for indicators?"
+msgstr "Näytetäänkö sivu footerissa?"
 
 #: pages/models.py
 msgid "Display insights"
